<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        app:cardElevation="@dimen/default_margin"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_match_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClick"
            android:padding="@dimen/default_margin"
            >

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_match_guest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/placeholder_guest"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_match_guest_points_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/points"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_match_guest_name"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_match_guest_games_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/games"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_match_guest_points_label"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_match_guest_sets_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/sets"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_match_guest_games_label"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_add_point"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_match_guest_sets_label"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_match_guest_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/score_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_match_guest_points_label"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_match_guest_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/score_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_match_guest_games_label"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_match_guest_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/score_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_match_guest_sets_label"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
