<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        tools:context=".view.StartMatchActivity"
        >

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            >

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_start_match_host_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:boxBackgroundColor="@android:color/transparent"
            >

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_start_match_guest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guest"
                android:inputType="textPersonName"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:boxBackgroundColor="@android:color/transparent"
            >

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_start_match_games_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/games"
                android:inputType="textPersonName"
                />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
