<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cd_item_history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardElevation="@dimen/default_margin"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            >

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_history_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/placeholder_date"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_history_host_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/zero"
                android:textSize="@dimen/score_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_history_started"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_history_guest_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/zero"
                android:textSize="@dimen/score_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_history_started"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_history_host_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toStartOf="@+id/tv_item_history_guest_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_history_host_sets"
                tools:text="@string/placeholder_host"
                />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_history_guest_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_item_history_host_name"
                app:layout_constraintTop_toBottomOf="@id/tv_item_history_guest_sets"
                tools:text="@string/placeholder_guest"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
